--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body, .wrapper, .content{
 body{
   padding: 0 10px;
   min-height: 100vh;
-  background: #4A98F7;
+  background: #a9f74a;
 }
 .wrapper{
   width: 440px;
